--- a/resource/css/application.css
+++ b/resource/css/application.css
@@ -15,3 +15,13 @@ h1{
 .welcomebox {
     margin: 0 auto;
 }
+footer{
+    min-width: 960px;
+    border-top: 2px solid #2a2c2e;
+    padding-bottom: 25px;
+    position: absolute;
+    bottom:20px;
+}
+footer p {
+    padding-top: 10px;
+}
